empty maven project

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,55 @@
-*.class
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.next
+release.properties
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IDEs
+nb-configuration.xml
+nbactions*.xml
 
-# Package Files #
+# log files
+*.log
+
+# python files
+flask
+
+# nodejs files
+node_modules
+
+*target*
 *.jar
 *.war
 *.ear
+*.class
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# eclipse specific git ignore
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# IntelliJ
+*.iml
+.idea
+
+#jrebel
+rebel.xml
+
